--- a/Banking_Application/src/main/resources/application.properties
+++ b/Banking_Application/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Banking_Application
 spring.datasource.url=jdbc:mysql://localhost:3306/manager
 spring.datasource.username=root
-spring.datasource.password=Fuckyouaunty
+spring.datasource.password=Helloworld
 spring.jpa.hibernate.ddl-auto=update
